<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Welcome to  Split the Bill App!"-->
<!--         />-->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Split1"
        android:gravity="fill_horizontal"
        android:text="@string/Split1"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/resview"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:contentDescription="@string/resimage"
        app:srcCompat="@drawable/res" />

    <Button
        android:id="@+id/btnsplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/btnsplithint"
        android:text="@string/btnsplittxt"
        android:textSize="@dimen/btnsplittxtsize" />

</LinearLayout>