<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Main2Activity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Split2"
        android:gravity="fill_horizontal"
        android:text="@string/Split2"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Enter bill amount"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Split3"
        android:text="@string/Split3"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Enter no. of people"
        android:inputType="number" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:entries="@array/txtGroup"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btncalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btncalculate"
        android:textSize="@dimen/btnsplittxtsize" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Split4"
        android:text="@string/Split4"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" "
        android:gravity="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Split5"
        android:text="@string/Split5"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textSize="30sp"/>


</LinearLayout>